# AGI-Pragma-Core

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: benchmarks.yml
agi_pragma/: __init__.py
artifacts/gridworld/: memory.json
artifacts/maze/: memory.json
artifacts/snake/: memory.json
benchmarks/: memory_comparison.py
benchmarks/baseline/: astar.py  run_astar.py
benchmarks/gridworld/: circuit_breaker.py  pragma_agent.py  risk_fmea.py  run.py
benchmarks/maze/: artifacts.py  bayes.py  circuit_breaker.py  critical_path.py  maze_env.py  pragma_agent.py  risk_fmea.py  run.py  tornado.py
benchmarks/multimodel/: run.py
benchmarks/snake/: circuit_breaker.py  pragma_agent.py  risk_fmea.py  run.py
core/: bayesian_updater.py
demos/dic_db/: bayes.py  circuit_breaker.py  critical_path.py  db_action.py  db_engine.py  dic_governor.py  mock_actor.py  risk_fmea.py  run.py
demos/dic_db/db/: demo.db
demos/dic_llm/: circuit_breaker.py  dic_governor.py  fmea_wizard.py  llm_actor_azure.py  llm_actor_groq.py  llm_actor_nim.py  llm_actor_ollama.py  mock_actor.py  run.py
demos/dic_llm/examples/: no_delete_temp.json  yes_write_plan.json
demos/dic_rag/: rag_fmea_adapter.py  rag_governor.py  run.py
docs/: applications.md  decision-governance.md  failure-modes.md  lessons-learned.md
docs/arxiv/: main.tex
docs/benchmarks/: maze.md
docs/metrics/: DAIR.md
